# Linear-Regression-From-Scratch

./: .gitignore  Error.py  LR.py  README.md  environment.yml  pyproject.toml  requirements.txt
naivelinear/: __init__.py  core.py  metrics.py
tests/: conftest.py  test_linear_regression.py
