[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "naivelinear"
version = "0.1.0"
description = "Naive closed-form linear regression (educational)."
readme = "README.md"
authors = [{ name = "Your Name" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["linear regression", "education", "machine learning", "naive"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24"
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.urls]
Homepage = "https://github.com/<your-username>/Linear-Regression-From-Scratch"
Repository = "https://github.com/<your-username>/Linear-Regression-From-Scratch"

[tool.setuptools.packages.find]
where = ["."]
include = ["naivelinear"]
